--- a/CodeBook.Rmd
+++ b/CodeBook.Rmd
@@ -1,9 +1,9 @@
 # Code Book
 
 ## Activities
-WALKING
-WALKING_UPSTAIRS
-WALKING_DOWNSTAIRS
-SITTING
-STANDING
-LAYING
+WALKING <br />
+WALKING_UPSTAIRS <br />
+WALKING_DOWNSTAIRS <br />
+SITTING <br />
+STANDING <br />
+LAYING <br />
