--- a/CodeBook.Rmd
+++ b/CodeBook.Rmd
@@ -19,4 +19,79 @@ tBodyAccJerk-mean()-X	<br />
 tBodyAccJerk-mean()-Y	<br />
 tBodyAccJerk-mean()-Z	<br />
 tBodyGyro-mean()-X	<br />
-
+tBodyGyro-mean()-Y	<br />
+tBodyGyro-mean()-Z	<br />
+tBodyGyroJerk-mean()-X	<br />
+tBodyGyroJerk-mean()-Y	<br />
+tBodyGyroJerk-mean()-Z	<br />
+tBodyAccMag-mean()	<br />
+tGravityAccMag-mean()	<br />
+tBodyAccJerkMag-mean()	<br />
+tBodyGyroMag-mean()	<br />
+tBodyGyroJerkMag-mean()	<br />
+fBodyAcc-mean()-X	<br />
+fBodyAcc-mean()-Y	<br />
+fBodyAcc-mean()-Z	<br />
+fBodyAcc-meanFreq()-X	<br />
+fBodyAcc-meanFreq()-Y	<br />
+fBodyAcc-meanFreq()-Z	<br />
+fBodyAccJerk-mean()-X	<br />
+fBodyAccJerk-mean()-Y	<br />
+fBodyAccJerk-mean()-Z	<br />
+fBodyAccJerk-meanFreq()-X	<br />
+fBodyAccJerk-meanFreq()-Y	<br />
+fBodyAccJerk-meanFreq()-Z	<br />
+fBodyGyro-mean()-X	<br />
+fBodyGyro-mean()-Y	<br />
+fBodyGyro-mean()-Z	<br />
+fBodyGyro-meanFreq()-X	<br />
+fBodyGyro-meanFreq()-Y	<br />
+fBodyGyro-meanFreq()-Z	<br />
+fBodyAccMag-mean()	<br />
+fBodyAccMag-meanFreq()	<br />
+fBodyBodyAccJerkMag-mean()	<br />
+fBodyBodyAccJerkMag-meanFreq()	<br />
+fBodyBodyGyroMag-mean()	<br />
+fBodyBodyGyroMag-meanFreq()	<br />
+fBodyBodyGyroJerkMag-mean()	<br />
+fBodyBodyGyroJerkMag-meanFreq()	<br />
+angle(tBodyAccMean,gravity)	<br />
+angle(tBodyAccJerkMean),gravityMean)	<br />
+angle(tBodyGyroMean,gravityMean)	<br />
+angle(tBodyGyroJerkMean,gravityMean)	<br />
+angle(X,gravityMean)	<br />
+angle(Y,gravityMean)	<br />
+angle(Z,gravityMean)	<br />
+tBodyAcc-std()-X	<br />
+tBodyAcc-std()-Y	<br />
+tBodyAcc-std()-Z	<br />
+tGravityAcc-std()-X	<br />
+tGravityAcc-std()-Y	<br />
+tGravityAcc-std()-Z	<br />
+tBodyAccJerk-std()-X	<br />
+tBodyAccJerk-std()-Y	<br />
+tBodyAccJerk-std()-Z	<br />
+tBodyGyro-std()-X	<br />
+tBodyGyro-std()-Y	<br />
+tBodyGyro-std()-Z	<br />
+tBodyGyroJerk-std()-X	<br />
+tBodyGyroJerk-std()-Y	<br />
+tBodyGyroJerk-std()-Z	<br />
+tBodyAccMag-std()	<br />
+tGravityAccMag-std()	<br />
+tBodyAccJerkMag-std()	<br />
+tBodyGyroMag-std()	<br />
+tBodyGyroJerkMag-std()	<br />
+fBodyAcc-std()-X	<br />
+fBodyAcc-std()-Y	<br />
+fBodyAcc-std()-Z	<br />
+fBodyAccJerk-std()-X	<br />
+fBodyAccJerk-std()-Y	<br />
+fBodyAccJerk-std()-Z	<br />
+fBodyGyro-std()-X	<br />
+fBodyGyro-std()-Y	<br />
+fBodyGyro-std()-Z	<br />
+fBodyAccMag-std()	<br />
+fBodyBodyAccJerkMag-std()	<br />
+fBodyBodyGyroMag-std()	<br />
+fBodyBodyGyroJerkMag-std()	<br />
